data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4251.wast
;; 10. **Test Description:**    Insert `call_indirect` within a nested `loop` that has an early exit condition (`br_if`) at a specific depth, which then calls a function indirectly, testing if prematurely exited nested loops correctly transition to the appropriate calling context.    - **Constraint Checked:** Early exits with nested loops in conjunction with `call_indirect`.    - **Mismanagement Relation:** Ensures that early exits don't cause confusion in control transitions within deeply nested loops.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (func $func1 (param i32) (result i32) (i32.const 0))
    (table funcref (elem $func1))
    (func (param i32) (result i32)
      (loop $loop1
        (br_if 0 (i32.const 1))
        (loop $loop2
          (br_if 1 (i32.const 1))
          (call_indirect (type $sig) (i32.const 1) (local.get 0))
        )
      )
    )
  )
  "type mismatch"
)